Use virtual threads